[package]
name = "all-is-cubes-port"
version = "0.9.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Data import/export for the all-is-cubes voxel engine."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = ["games", "rendering::data-formats"]
keywords = ["all-is-cubes", "voxel"]

[package.metadata.docs.rs]
features = []

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[features]
default = ["all-formats", "export", "import"]
# Importing all selected formats
import = []
# Exporting all selected formats
export = []
# Enable all supported formats
all-formats = ["native", "gltf", "stl", "dot-vox"]
# Reading and writing native All is Cubes universe files.
native = [
    "all-is-cubes/save",
    "dep:serde_json",
]
# Writing glTF 2.0 files.
gltf = [
    "dep:all-is-cubes-mesh",
    "dep:all-is-cubes-render",
    "dep:base64", # inline buffer data URL encoding
    "dep:bytemuck", # buffer creation
    "dep:gltf-json",
    "dep:image", # texture writing
    "dep:rectangle-pack", # texture atlas creation
    "dep:serde_json",
]
# Writing STL (triangle mesh) files.
stl = [
    "dep:all-is-cubes-mesh",
    "dep:all-is-cubes-render",
    "dep:stl_io",
]
# Reading and writing MagicaVoxel .vox files.
dot-vox = [
    "dep:all-is-cubes-mesh",
    "dep:all-is-cubes-render",
    "dep:dot_vox",
]
# Adds automatic parallelism to some algorithms (but not all possible uses of concurrency).
# If disabled, `std::thread` is never used.
# If enabled, threads may be created and the active `rayon` thread pool may be used.
auto-threads = [
    "dep:rayon",
    "yield-progress/sync",
]

[dependencies]
# Non-optional generally required dependencies
# need all-is-cubes/std because we have boxed Send futures and errors
all-is-cubes = { workspace = true, features = ["std"] }
cfg-if = { workspace = true }
futures-channel = { workspace = true }
futures-core = { workspace = true }
itertools = { workspace = true }
# TODO: replace logging with explicit reporting data flow
log = { workspace = true }
# Used for internal execution of not-publicly-async code
pollster = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
# Not used directly as an extern crate, but we need to enable features.
yield-progress = { workspace = true }
yoke = { workspace = true }

# Dependencies related to formats
all-is-cubes-mesh = { workspace = true, optional = true }
all-is-cubes-render = { workspace = true, optional = true }
# By disabling default features, we disable a dependency on `ahash` â† `getrandom` and use the
# `std` `HasHMap` instead, which is useful for web-wasm compatibility.
# TODO: But in the long run we will want `no_std` compatibility.
dot_vox = { version = "5.1.1", default-features = false, optional = true }
stl_io = { version = "0.10.0", optional = true }
# json is used for native and glTF
serde_json = { workspace = true, optional = true }

# glTF related dependencies
base64 = { workspace = true, optional = true, features = ["alloc"] }
bytemuck = { workspace = true, optional = true, features = ["derive"] }
# gltf-json often has semver-incompatible changes, so pin it
gltf-json = { version = ">=1.4.1, <1.5.0", optional = true, default-features = false, features = ["names", "KHR_materials_volume", "KHR_materials_transmission"] }
# Used to write glTF textures
image = { workspace = true, optional = true, features = ["png"] }
# Used to pack glTF textures
# std feature enables use of HashMap instead of BTreeMap
rectangle-pack = { workspace = true, optional = true, features = ["std"] }

[dev-dependencies]
all-is-cubes-render = { workspace = true, features = ["raytracer", "std"] }
macro_rules_attribute = { workspace = true }
snapbox = { workspace = true, features = ["path"] }
either = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
# Using smol for async test-running.
# TODO: Consider defining our own macros and stripping down the dependencies.
smol-macros = { workspace = true }

[lints]
workspace = true
