[package]
name = "all-is-cubes-render"
version = "0.10.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Raytracer and rendering abstractions for the all-is-cubes voxel engine."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = ["games", "graphics", "rendering"]
keywords = ["all-is-cubes", "voxel", "raytracing"]

[package.metadata.docs.rs]
all-features = true

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[[bench]]
name = "raytrace"
harness = false
required-features = ["raytracer"]

# See src/lib.rs documentation for more details on features.
[features]
default = ["std"]
# Adds `std`-dependent functionality such as thread safety.
std = [
    "all-is-cubes/std",
]
# Adds automatic parallelism to some algorithms.
# If disabled, `std::thread` is never used.
# If enabled, threads may be created and the active `rayon` thread pool may be used.
auto-threads = ["std", "dep:rayon"]
# Adds the `raytracer` module.
raytracer = [
    "dep:embedded-graphics", # to render overlay info text
    "dep:hashbrown",
    "dep:rand", # random bounce rays
    "dep:rand_distr", # random bounce rays
    "dep:unicode-segmentation", # text-output raytracer -- TODO: consider giving it its own feature
]
# Enables `serde` serialization for `GraphicsOptions` and its component types.
serde = ["all-is-cubes/_serde_math_and_graphics_options"]

[dependencies]
all-is-cubes = { workspace = true }
bitflags = { workspace = true }
displaydoc = { workspace = true }
embedded-graphics = { workspace = true, optional = true }
futures-core = { workspace = true }
hashbrown = { workspace = true, optional = true }
imgref = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
manyfmt = { workspace = true }
mutants = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
unicode-segmentation = { workspace = true, optional = true }

[dev-dependencies]
async-io = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
