[package]
name = "all-is-cubes-server"
version = "0.5.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
edition = "2021"
rust-version = "1.65"
description = "Game server for the web edition of the recursive voxel game All is Cubes."
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"
license = "MIT OR Apache-2.0"
# TODO: revisit categories once it's more settled what's in this package
categories = ["games"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[[bin]]
name = "aic-server"
bench = false
test = false # any testable code will be in lib

[features]
# If enabled, the All is Cubes game client static files will be included in the server
# binary. This is larger and slower to compile but creates a binary not needing any
# accompanying files.
embed = []

[dependencies]
# TODO: server doesn't actually have any game-server functionality so this is unnecessary
# all-is-cubes = { path = "../all-is-cubes", version = "0.5.0", features = ["threads"] }
anyhow = "1.0"
axum = { version = "0.5.13", features = ["tower-log"] }
include_dir = "0.7.2"
mime_guess = "2.0.4" # also used indirectly by tower-http
simplelog = "0.12.0"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["fs"] }

[dev-dependencies]
async_fn_traits = "0.1.1"
reqwest = "0.11.11"
# add "process" feature for tests to spawn the server
tokio = { version = "1.23.1", features = ["process"] }
