[package]
name = "all-is-cubes-server"
version = "0.6.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
edition = "2021"
rust-version = "1.65"
description = "Game server for the web edition of the recursive voxel game All is Cubes."
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"
license = "MIT OR Apache-2.0"
# TODO: revisit categories once it's more settled what's in this package
categories = ["games"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false
# Disable doctest running to reduce total noise in `cargo test` output.
# Doctests are so slow, and not well applicable here, so we don't currently have any.
doctest = false

[[bin]]
name = "aic-server"
bench = false
test = false # any testable code will be in lib

[features]
# If enabled, the All is Cubes game client static files will be included in the server
# binary. This is larger and slower to compile but creates a binary not needing any
# accompanying files.
embed = []

[dependencies]
# TODO: server doesn't actually have any game-server functionality so this is unnecessary
# all-is-cubes = { path = "../all-is-cubes", version = "0.6.0", features = ["threads"] }
anyhow = { workspace = true }
axum = { version = "0.7.2", features = ["tower-log"] }
clap = { workspace = true }
include_dir = "0.7.2"
mime_guess = "2.0.4" # also used indirectly by tower-http
simplelog = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["fs"] }

[dev-dependencies]
async_fn_traits = { workspace = true }
# Note that with default features disabled, reqwest has no TLS/SSL support.
# This is usable because we are only using it to talk to the local server.
reqwest = { version = "0.11.11", default-features = false }
# add "process" feature for tests to spawn the server
tokio = { workspace = true, features = ["process"] }

[lints]
workspace = true
