[package]
name = "all-is-cubes-server"
version = "0.10.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Game server for the web edition of the recursive voxel game All is Cubes."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
# TODO: revisit categories once it's more settled what's in this package
categories = ["games"]
keywords = ["all-is-cubes"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false
# Disable doctest running (we have none) to reduce total noise in `cargo test` output.
# This lib is not currently expected to have any especially relevant public API to document.
doctest = false

[[bin]]
name = "aic-server"
bench = false
test = false # any testable code will be in lib

[features]
# If enabled, the All is Cubes game client static files will be included in the server
# binary. This is larger and slower to compile but creates a binary not needing any
# accompanying files.
embed = []

[dependencies]
# TODO: server doesn't actually have any game-server functionality so this is unnecessary
# all-is-cubes = { workspace = true, features = ["auto-threads"] }
anyhow = { workspace = true }
axum = { version = "0.8.1", features = ["tower-log"] }
clap = { workspace = true }
include_dir = "0.7.2"
mime_guess = "2.0.4" # also used indirectly by tower-http
simplelog = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }

[dev-dependencies]
# Note that with default features disabled, reqwest has no TLS/SSL support.
# This is usable because we are only using it to talk to the local server.
reqwest = { version = "0.13.0", default-features = false }
# add "process" feature for tests to spawn the server
tokio = { workspace = true, features = ["process"] }

[lints]
workspace = true
