[package]
name = "all-is-cubes-ui"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "User interface subsystem for the all-is-cubes engine."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = ["games", "gui"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[dependencies]
# TODO: Disable default features. Requires more `maybe_sync` work.
all-is-cubes = { workspace = true, default-features = true }
async_fn_traits = { workspace = true }
displaydoc = { workspace = true }
exhaust = { workspace = true }
flume = { workspace = true }
futures-core = { workspace = true }
futures-task = { workspace = true }
futures-util = { workspace = true }
indoc = { workspace = true }
log = { workspace = true }
scopeguard = { workspace = true }
sync_wrapper = { workspace = true }

[dev-dependencies]
futures-channel = { workspace = true }
pretty_assertions = { workspace = true }
# Using tokio for async test-running.
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
