[package]
name = "all-is-cubes-ui"
version = "0.10.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "User interface subsystem for the all-is-cubes voxel engine."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = ["games", "gui"]
keywords = ["all-is-cubes", "voxel"]

[package.metadata.docs.rs]
features = ["session"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[features]
# Enable the `apps` and `notification` modules, particularly including the `Session` type,
# and require `std` support.
session = [
    "all-is-cubes/std",
    "all-is-cubes-render/serde", # for settings storage - may be replaced
    "dep:async_fn_traits",
    "dep:flume",
    "dep:futures-core",
    "dep:futures-task",
    "dep:futures-util",
    "dep:hashbrown", # for settings storage
    "dep:scopeguard",
    "dep:serde", # for settings storage -- may be replaced
    "dep:sync_wrapper",
]

[dependencies]
all-is-cubes = { workspace = true, default-features = false }
all-is-cubes-render = { workspace = true, default-features = false }
async_fn_traits = { workspace = true, optional = true }
bevy_platform = { workspace = true }
displaydoc = { workspace = true }
exhaust = { workspace = true }
flume = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
futures-task = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true, features = ["serde"] }
indoc = { workspace = true }
log = { workspace = true }
macro_rules_attribute = { workspace = true }
mutants = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
scopeguard = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["rc"] }
sync_wrapper = { workspace = true, optional = true }

[dev-dependencies]
futures-channel = { workspace = true }
pretty_assertions = { workspace = true }
# Using smol for async test-running.
# TODO: Consider defining our own macros and stripping down the dependencies.
smol-macros = { workspace = true }

[lints]
workspace = true
