[workspace]
# Excludes this from containing workspace; see top-level Cargo.toml for explanation

[package]
name = "all-is-cubes-wasm"
version = "0.7.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
edition = "2021"
rust-version = "1.73"
description = "Web client for the recursive voxel game All is Cubes."
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"
license = "MIT OR Apache-2.0"
categories = ["games", "wasm"]
# Disable publishing for now because if I understand correctly, publishing this _Rust_ package is mostly useless as it leaves behind all of the JS/static stuff. It would only be useful if there was a need to build something *else* that depends on the Rust code but none of the JS.
publish = false

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false
# There are some host-runnable unit tests (but we might move those...)
test = true
# Not a published library, so no doctests
doctest = false
# Need "cdylib" for the final wasm module, and "lib" for building tests
crate-type = ["lib", "cdylib"]

[dependencies]
all-is-cubes = { path = "../all-is-cubes", version = "0.7.0" }
all-is-cubes-content = { path = "../all-is-cubes-content", version = "0.7.0" }
all-is-cubes-gpu = { path = "../all-is-cubes-gpu", version = "0.7.0", features = ["wgpu"] }
all-is-cubes-port = { path = "../all-is-cubes-port", version = "0.7.0" }
all-is-cubes-ui = { path = "../all-is-cubes-ui", version = "0.7.0" }
console_log = "1.0.0"
console_error_panic_hook = "0.1.5"
form_urlencoded = "1.0.1"
futures-channel = "0.3.28"
futures-core = "0.3.28"
# Feature enabling for indirect dependency all-is-cubes → rand → getrandom,
# as well as our direct dependency
getrandom = { version = "0.2.7", features = ["js"] }
# Feature enabling for indirect dependency all-is-cubes-content → noise → rand → getrandom
getrandom_old = { package = "getrandom", version = "0.1.16", features = ["wasm-bindgen"] }
js-sys = "0.3.67"
log = { version = "0.4.17", default-features = false }
once_cell = "1.19.0"
rand = { version = "0.8.3", default-features = false, features = ["std", "std_rng"] }
send_wrapper = "0.6.0"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-time = { version = "1.0.0" }
wgpu = { version = "0.19.3", default-features = false, features = ["webgl"] }
# Feature enabling
yield-progress = { version = "0.1.5", features = ["log_hiccups"] }

[dependencies.web-sys]
version = "0.3.67"
features = [
  "console",
  "AddEventListenerOptions",
  "CssStyleDeclaration", # HTMLElement.style for dynamic styling
  "DataTransfer", # file drag-and-drop
  "DataTransferItem",  # file drag-and-drop
  "DataTransferItemList", # file drag-and-drop
  "Document",
  "DomTokenList", # classList
  "DragEvent", # file drag-and-drop
  "Element",
  "EventTarget",
  "File",  # file drag-and-drop - DataTransferItem.getAsFile()
  "FocusEvent",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlProgressElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Text",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unsafe_op_in_unsafe_fn = "deny"

rust.explicit_outlives_requirements = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.noop_method_call = "warn"
rust.trivial_casts = "warn"
rust.trivial_numeric_casts = "warn"
rust.unused_extern_crates = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# This lint has false positives on dev-dependencies. Occasionally turn it on to audit non-dev deps.
# rust.unused_crate_dependencies = "warn"

clippy.collapsible_else_if = "allow"
clippy.collapsible_if = "allow"
clippy.match_ref_pats = "allow"
clippy.needless_update = "allow"
clippy.single_match = "allow"

clippy.should_panic_without_expect = "deny"

clippy.cast_lossless = "warn"
clippy.doc_markdown = "warn"
clippy.exhaustive_enums = "warn"
clippy.exhaustive_structs = "warn"
clippy.into_iter_without_iter = "warn"
clippy.iter_without_into_iter = "warn"
clippy.modulo_arithmetic = "warn"
clippy.return_self_not_must_use = "warn"
clippy.suboptimal_flops = "warn"
clippy.undocumented_unsafe_blocks = "warn"
clippy.uninlined_format_args = "warn"
clippy.unnecessary_self_imports = "warn"
clippy.unused_async = "warn"
clippy.wrong_self_convention = "warn"

# wasm-specific config
clippy.arc_with_non_send_sync = "allow"

[profile.dev]
# Enable some optimization to improve interactive performance in manual testing/experimenting.
# In particular, inlining is crucial.
opt-level = 2
# Yes, this is the default for dev, but I want to be precise here: overflow checks are enabled
# for ALL profiles. (Because not catching overflows in release mode is unwise when this is
# precisely where the program is *likely to encounter bigger numbers than in testing*.)
overflow-checks = true
# Faster builds at the cost of pathname-sensitive debug info.
split-debuginfo = "unpacked"

# For packages whose code is not as performance-critical, spend less time optimizing
package.all-is-cubes-content.opt-level = 1
package.all-is-cubes-port.opt-level = 1
package.all-is-cubes-ui.opt-level = 1

[profile.release]
# TODO: review recommended options for wasm releases
overflow-checks = true

[profile.test]
overflow-checks = true

[patch.crates-io]
# Here are some patches we might want to apply for development:
#
# wgpu = { git = "https://github.com/gfx-rs/wgpu/", branch = "trunk" }
