[workspace]
# Excludes this from containing workspace; see top-level Cargo.toml for explanation

[package]
name = "all-is-cubes-wasm"
version = "0.9.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
edition = "2021"
rust-version = "1.85"
description = "Web client for the recursive voxel game All is Cubes."
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"
license = "MIT OR Apache-2.0"
categories = ["games", "wasm"]
keywords = ["all-is-cubes"]
# Disable publishing for now because if I understand correctly, publishing this _Rust_ package is mostly useless as it leaves behind all of the JS/static stuff. It would only be useful if there was a need to build something *else* that depends on the Rust code but none of the JS.
publish = false

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false
# There are some host-runnable unit tests (but we might move those...)
test = true
# Not a published library, so no doctests
doctest = false
# Need "cdylib" for the final wasm module, and "lib" for building tests
crate-type = ["lib", "cdylib"]

[dependencies]
all-is-cubes = { path = "../all-is-cubes", version = "0.9.0" }
all-is-cubes-content = { path = "../all-is-cubes-content", version = "0.9.0" }
all-is-cubes-gpu = { path = "../all-is-cubes-gpu", version = "0.9.0", features = ["wgpu"] }
all-is-cubes-port = { path = "../all-is-cubes-port", version = "0.9.0", features = ["import", "all-formats"] }
all-is-cubes-render = { path = "../all-is-cubes-render", version = "0.9.0" }
all-is-cubes-ui = { path = "../all-is-cubes-ui", version = "0.9.0", features = ["session"] }
console_log = "1.0.0"
console_error_panic_hook = "0.1.5"
form_urlencoded = "1.0.1"
# We only use oneshot, which requires alloc
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
# We only use BoxFuture, which requires alloc
futures-core = { version = "0.3.31", default-features = false, features = ["alloc"] }
# Feature enabling for indirect dependency all-is-cubes → rand → getrandom,
# as well as our direct dependency
getrandom = { version = "0.2.7", features = ["js"] }
js-sys = "0.3.77"
log = { version = "0.4.22", default-features = false }
rand = { version = "0.8.3", default-features = false, features = ["std", "std_rng"] }
send_wrapper = { version = "0.6.0", default-features = false }
# Used for settings serialization
serde_json = { version = "1.0.79", default-features = false, features = ["std"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-time = { version = "1.1.0" }
# Must be the same version as in the main workspace, i.e. as in all-is-cubes-gpu.
wgpu = { version = "24.0.0", default-features = false, features = ["webgpu", "webgl"] }
# Feature enabling
yield-progress = { version = "0.1.6", features = ["log_hiccups"] }

[dependencies.web-sys]
version = "0.3.77"
features = [
  "console",
  "AddEventListenerOptions",
  "CssStyleDeclaration", # HTMLElement.style for dynamic styling
  "DataTransfer", # file drag-and-drop
  "DataTransferItem",  # file drag-and-drop
  "DataTransferItemList", # file drag-and-drop
  "Document",
  "DomTokenList", # classList
  "DragEvent", # file drag-and-drop
  "Element",
  "EventTarget",
  "File",  # file drag-and-drop - DataTransferItem.getAsFile()
  "FocusEvent",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlProgressElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Storage", # settings persistence
  "Text",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lints.rust]
# rustc lints that are set to deny
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"

# rustc lints that are set to warn
explicit_outlives_requirements = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
noop_method_call = "warn"
redundant_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# This lint has false positives on dev-dependencies. Occasionally turn it on to audit non-dev deps.
# rust.unused_crate_dependencies = "warn"

[lints.clippy]
# clippy default lints that are set to allow
bool_assert_comparison = "allow" # not necessarily clearer
collapsible_else_if = "allow"
collapsible_if = "allow"
duplicated_attributes = "allow" # false positive prone <https://github.com/rust-lang/rust-clippy/issues/13355>
match_ref_pats = "allow"
needless_update = "allow"
single_match = "allow"

# clippy::pedantic lints that are set to allow
cast_possible_truncation = "allow" # we would need an alternative for intentional from-float saturation and to-float precision loss
cast_precision_loss = "allow" # consider enabling
cast_sign_loss = "allow" # consider enabling
default_trait_access = "allow"
empty_enum = "allow"
enum_glob_use = "allow"
explicit_iter_loop = "allow" # I prefer the opposite style
float_cmp = "allow"
from_iter_instead_of_collect = "allow" # <https://github.com/rust-lang/rust-clippy/issues/7213>
if_not_else = "allow"
inline_always = "allow"
items_after_statements = "allow" # we use this sparingly
manual_assert = "allow"
many_single_char_names = "allow"
match_bool = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow" # consider enabling
missing_panics_doc = "allow" # consider enabling
must_use_candidate = "allow" # consider enabling
no_effect_underscore_binding = "allow"
range_plus_one = "allow" # https://github.com/rust-lang/rust-clippy/issues/3307
redundant_closure_for_method_calls = "allow" # consider enabling
redundant_else = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow" # not advice we need; often spurious
too_many_lines = "allow"
unreadable_literal = "allow"
wildcard_imports = "allow" # we use this sparingly

# clippy::restriction lints that are set to allow (to note why we aren't using them)
shadow_unrelated = "allow" # would use except for <https://github.com/rust-lang/rust-clippy/issues/10780>

# clippy lints that are set to deny
should_panic_without_expect = "deny"

# clippy lints that are set to warn
pedantic = { level = "warn", priority = -1 }
assigning_clones = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
doc_markdown = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
into_iter_without_iter = "warn"
inconsistent_struct_constructor = "warn"
infinite_loop = "warn"
iter_without_into_iter = "warn"
large_futures = "warn"
large_stack_frames = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_fields_in_debug = "warn"
module_name_repetitions = "warn"
modulo_arithmetic = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
pub_without_shorthand = "warn"
return_self_not_must_use = "warn"
suboptimal_flops = "warn"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
wrong_self_convention = "warn"

# wasm-specific config
arc_with_non_send_sync = "allow"

[profile.dev]
# Enable some optimization to improve interactive performance in manual testing/experimenting.
# In particular, inlining is crucial.
opt-level = 2
# Yes, this is the default for dev, but I want to be precise here: overflow checks are enabled
# for ALL profiles. (Because not catching overflows in release mode is unwise when this is
# precisely where the program is *likely to encounter bigger numbers than in testing*.)
overflow-checks = true
# Faster builds at the cost of pathname-sensitive debug info.
split-debuginfo = "unpacked"

# For packages whose code is not as performance-critical, spend less time optimizing
package.all-is-cubes-content.opt-level = 1
package.all-is-cubes-port.opt-level = 1
package.all-is-cubes-ui.opt-level = 1

[profile.release]
# TODO: review recommended options for wasm releases
overflow-checks = true

[profile.test]
overflow-checks = true

[patch.crates-io]
# Here are some patches we might want to apply for development:
#
# wgpu = { git = "https://github.com/gfx-rs/wgpu/", branch = "trunk" }
# exhaust = { git = "https://github.com/kpreid/exhaust/", branch = "main" }
